Fix Remark overflow bug
- Replace Flowpane with Label and adjust styling using css

--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -63,12 +63,12 @@
     -fx-text-fill: white;
 }
 
-#remark {
+.remark {
     -fx-hgap: 7;
     -fx-vgap: 3;
 }
 
-#remark .label {
+.remark {
     -fx-background-color: #6FB6ED; /*light blue for tags*/
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
